--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,14 @@ baseurl: "/" # the subpath of your site, e.g. /blog
 title: "Masba Studio" # the name of your site, e.g. ACME Corp.
 timezone: UTC
 
+defaults:
+  - scope:
+      path: ""
+    values:
+      keywords: "Masba Studio, sublimation printing Malaysia, custom T-shirt, graphic design, video editing, CapCut design, Canva, website design Malaysia, printing Perak"
+
 plugins:
   - jekyll-seo-tag
+
+# jekyll-seo-tag configurations
+author: Masba Studio
