--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,34 @@
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: "" # the subpath of your site, e.g. /blog
-title: "" # the name of your site, e.g. ACME Corp.
+url: "https://masbastudio.my" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+title: "Masba Studio" # the name of your site, e.g. ACME Corp.
+keywords: "Masba Studio, reka bentuk grafik, baju sublimation, template Canva, printing Malaysia"
+
+
+
+plugins:
+  - jekyll-seo-tag
+
+# jekyll-seo-tag
+author: Masba Studio
+locale: ms_MY
+
+
+
+
+
+
+
+exclude:
+  - "*.config.js"
+  - package.json
+  - pnpm-lock.yaml
+  - .sass-cache/
+  - .jekyll-cache/
+  - gemfiles/
+  - Gemfile
+  - Gemfile.lock
+  - node_modules/
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
